# stm32_qt_wifi

./: README.md
qt/: CMakeLists.txt  main.cpp
qt/include/: config.h  mainwindow.h  protocol.h  ringbuffer.h  socket_client.h
qt/src/: mainwindow.cpp  protocol.c  ringbuffer.c  socket_client.cpp
stm32/HARDWARE/: wifi_esp8266.c  wifi_esp8266.h
stm32/USER/: USART.uvguix.zengzr  main.c  protocol.c  protocol.h  type.h  wifi_esp8266.c
